Updated functions in Statistics jupyter notebook to only account for inputs of type list and not inputs of type string

--- a/csgo/analytics/Statistics.ipynb
+++ b/csgo/analytics/Statistics.ipynb
@@ -10,8 +10,7 @@
     "from csgo.parser import DemoParser\n",
     "import pandas as pd\n",
     "import operator\n",
-    "pd.set_option('display.max_columns', None)\n",
-    "logical_operators=('==','!=','<=','>=','<','>')"
+    "pd.set_option('display.max_columns', None)"
    ]
   },
   {
@@ -24,26 +23,26 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "04:00:03 [INFO] Go version>=1.14.0\n",
-      "04:00:03 [INFO] Initialized CSGODemoParser with demofile C:\\Users\\aagrawal-22\\CSGO_Demofiles\\gambit-vs-natus-vincere-m1-dust2.dem\n",
-      "04:00:03 [INFO] Setting demo id to GA-NaVi-BLAST2021\n",
-      "04:00:03 [INFO] Setting parse rate to 128\n",
-      "04:00:03 [INFO] Running Golang parser from C:\\Users\\aagrawal-22\\Anaconda3\\lib\\site-packages\\csgo-0.1-py3.8.egg\\csgo\\parser\\\n",
-      "04:00:03 [INFO] Looking for file at C:\\Users\\aagrawal-22\\CSGO_Demofiles\\gambit-vs-natus-vincere-m1-dust2.dem\n",
-      "04:00:35 [INFO] Wrote demo parse output to GA-NaVi-BLAST2021.json\n",
-      "04:00:35 [INFO] Reading in JSON from GA-NaVi-BLAST2021.json\n",
-      "04:00:36 [INFO] JSON data loaded, available in the `json` attribute to parser\n",
-      "04:00:36 [INFO] Successfully parsed JSON output\n",
-      "04:00:36 [INFO] Successfully returned JSON output\n",
-      "04:00:36 [INFO] Parsed rounds to Pandas DataFrame\n",
-      "04:00:36 [INFO] Parsed kills to Pandas DataFrame\n",
-      "04:00:36 [INFO] Parsed damages to Pandas DataFrame\n",
-      "04:00:36 [INFO] Parsed grenades to Pandas DataFrame\n",
-      "04:00:36 [INFO] Parsed flashes to Pandas DataFrame\n",
-      "04:00:36 [INFO] Parsed bomb_events to Pandas DataFrame\n",
-      "04:00:36 [INFO] Parsed frames to Pandas DataFrame\n",
-      "04:00:36 [INFO] Parsed player frames to Pandas DataFrame\n",
-      "04:00:36 [INFO] Returned dataframe output\n"
+      "00:45:24 [INFO] Go version>=1.14.0\n",
+      "00:45:24 [INFO] Initialized CSGODemoParser with demofile C:\\Users\\aagrawal-22\\CSGO_Demofiles\\gambit-vs-natus-vincere-m1-dust2.dem\n",
+      "00:45:24 [INFO] Setting demo id to GA-NaVi-BLAST2021\n",
+      "00:45:24 [INFO] Setting parse rate to 128\n",
+      "00:45:24 [INFO] Running Golang parser from C:\\Users\\aagrawal-22\\Anaconda3\\lib\\site-packages\\csgo-0.1-py3.8.egg\\csgo\\parser\\\n",
+      "00:45:24 [INFO] Looking for file at C:\\Users\\aagrawal-22\\CSGO_Demofiles\\gambit-vs-natus-vincere-m1-dust2.dem\n",
+      "00:45:56 [INFO] Wrote demo parse output to GA-NaVi-BLAST2021.json\n",
+      "00:45:56 [INFO] Reading in JSON from GA-NaVi-BLAST2021.json\n",
+      "00:45:56 [INFO] JSON data loaded, available in the `json` attribute to parser\n",
+      "00:45:56 [INFO] Successfully parsed JSON output\n",
+      "00:45:56 [INFO] Successfully returned JSON output\n",
+      "00:45:56 [INFO] Parsed rounds to Pandas DataFrame\n",
+      "00:45:56 [INFO] Parsed kills to Pandas DataFrame\n",
+      "00:45:56 [INFO] Parsed damages to Pandas DataFrame\n",
+      "00:45:56 [INFO] Parsed grenades to Pandas DataFrame\n",
+      "00:45:56 [INFO] Parsed flashes to Pandas DataFrame\n",
+      "00:45:56 [INFO] Parsed bomb_events to Pandas DataFrame\n",
+      "00:45:56 [INFO] Parsed frames to Pandas DataFrame\n",
+      "00:45:57 [INFO] Parsed player frames to Pandas DataFrame\n",
+      "00:45:57 [INFO] Returned dataframe output\n"
      ]
     }
    ],
@@ -55,28 +54,6 @@
   {
    "cell_type": "code",
    "execution_count": 3,
-   "id": "1fb50afa",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "def filters_iterator(filters,key,col_type):\n",
-    "# function that checks if each value of the specified key is of the same type as the key's corresponding column \n",
-    "    # param filters: a dictionary where the keys are the columns to filter the dataframe by and the values are the filters\n",
-    "    # param key: the key in param filters to check the values for in string fomat\n",
-    "    # param col_type: the type of the corresponding column (bool or str)\n",
-    "# raises an Exception if a value of the specified key is not of the same type as the key's corresponding column \n",
-    "    if isinstance(filters[key],list): \n",
-    "        for index in filters[key]: \n",
-    "            if not isinstance(index,col_type): \n",
-    "                raise Exception(\"Filter(s) for column \"+f'\"{key}\"'+\" must be of type(s) \"+str(col_type))\n",
-    "    else: \n",
-    "        if not isinstance(filters[key],col_type):\n",
-    "            raise Exception(\"Filter(s) for column \"+f'\"{key}\"'+\" must be of type(s) \"+str(col_type))"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 4,
    "id": "f9f7fc78",
    "metadata": {},
    "outputs": [],
@@ -84,64 +61,55 @@
     "def extract_numeric_filters(filters,key): \n",
     "# function that extracts the logical operators and numerical values from each value of the specified key\n",
     "    # param filters: a dictionary where the keys are the columns to filter the dataframe by and the values are the filters\n",
-    "    # param key: the key in param filters to check the values for in string format\n",
+    "    # param key: the key in param filters to check the values for\n",
     "# raises an Exception if there is an invalid logic operator or numerical value in a value of the specified key \n",
     "# returns a list with all of the logical operators and a list with all of the numerical values found in the key's values\n",
-    "    i,sign,sign_list,val_list=0,\"\",[],[] \n",
-    "    if isinstance(filters[key],list): \n",
-    "        for index in filters[key]:\n",
-    "            i,sign=0,\"\"\n",
-    "            while i<len(index) and not index[i].isdecimal(): \n",
-    "                sign+=index[i] \n",
-    "                end_index=i \n",
-    "                i+=1\n",
-    "            if sign not in logical_operators: \n",
-    "                raise Exception(\"Invalid logical operator in filters for \"+f'\"{key}\"'+\" column\") \n",
-    "            sign_list.append(sign) \n",
-    "            try:\n",
-    "                val_list.append(float(index[end_index+1:])) \n",
-    "            except ValueError as ve:\n",
-    "                raise Exception(\"Invalid numerical value in filters for \"+f'\"{key}\"'+\" column\") from ve       \n",
-    "    else: \n",
-    "        while i<len(filters[key]) and not filters[key][i].isdecimal():\n",
-    "            sign+=filters[key][i] \n",
+    "    sign_list,val_list=[],[] \n",
+    "    for index in filters[key]:\n",
+    "        i,sign=0,\"\"\n",
+    "        while i<len(index) and not index[i].isdecimal(): \n",
+    "            sign+=index[i] \n",
     "            end_index=i \n",
-    "            i+=1 \n",
-    "        if sign not in logical_operators: \n",
-    "            raise Exception(\"Invalid logical operator in filters for \"+f'\"{key}\"'+\" column\")\n",
+    "            i+=1\n",
+    "        if sign not in ('==','!=','<=','>=','<','>'): \n",
+    "            raise Exception(\"Invalid logical operator in filters for \"+f'\"{key}\"'+\" column\") \n",
     "        sign_list.append(sign) \n",
     "        try:\n",
-    "            val_list.append(float(filters[key][end_index+1:]))\n",
+    "            val_list.append(float(index[end_index+1:])) \n",
     "        except ValueError as ve:\n",
-    "            raise Exception(\"Invalid numerical value in filters for \"+f'\"{key}\"'+\" column\") from ve\n",
+    "            raise Exception(\"Invalid numerical value in filters for \"+f'\"{key}\"'+\" column\") from ve    \n",
     "    return sign_list,val_list "
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 4,
    "id": "3e5eb210",
    "metadata": {},
    "outputs": [],
    "source": [
     "def check_filters(df,filters):\n",
-    "# function that checks if the filters are valid by calling the function filters_iterator for columns of object and boolean \n",
-    "# types and the function extract_numeric_filters for columns of integer and float types\n",
+    "# function that checks if the filters are valid by iterating over the values for each key and checking their type for columns of object and boolean types \n",
+    "# and calling the function extract_numeric_filters for columns of integer and float types\n",
     "    # param df: the dataframe to be filtered\n",
     "    # param filters: a dictionary where the keys are the columns to filter the dataframe by and the values are the filters\n",
-    "# raises Exceptions through the functions filters_iterator and extract_numeric_filters\n",
+    "# raises Exceptions if there is a type mismatch for string and boolean columns or through the function extract_numeric_filters \n",
     "    for key in filters:\n",
     "        if df.dtypes[key]==\"O\":\n",
-    "            filters_iterator(filters,key,str)\n",
+    "            for index in filters[key]: \n",
+    "                if not isinstance(index,str): \n",
+    "                    raise Exception(\"Filter(s) for column \"+f'\"{key}\"'+\" must be of type string\")\n",
     "        elif df.dtypes[key]==\"bool\":\n",
-    "            filters_iterator(filters,key,bool)\n",
+    "            for index in filters[key]: \n",
+    "                if not isinstance(index,bool): \n",
+    "                    raise Exception(\"Filter(s) for column \"+f'\"{key}\"'+\" must be of type boolean\")\n",
     "        else:\n",
-    "            extract_numeric_filters(filters,key)"
+    "            extract_numeric_filters(filters,key)  "
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 5,
    "id": "53351d76",
    "metadata": {},
    "outputs": [],
@@ -149,9 +117,9 @@
     "def logical_operation(df,col,sign,val):\n",
     "# function that filters the given dataframe given a logical operator and a numerical value\n",
     "    # param df: the dataframe to be filtered\n",
-    "    # param col: the column of the dataframe to be filtered in string format\n",
-    "    # param sign: the logical operator in string format\n",
-    "    # param val: the numerical value to filter the column by in float format\n",
+    "    # param col: the column of the dataframe to be filtered \n",
+    "    # param sign: the logical operator \n",
+    "    # param val: the numerical value to filter the column by \n",
     "# returns a filtered copy of the dataframe\n",
     "    operations={\"==\":operator.eq(df[col],val),\"!=\":operator.ne(df[col],val),\n",
     "                \"<=\":operator.le(df[col],val),\">=\":operator.ge(df[col],val),\n",
@@ -162,7 +130,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 6,
    "id": "7d083ccd",
    "metadata": {},
    "outputs": [],
@@ -176,24 +144,21 @@
     "    check_filters(df_copy,filters) \n",
     "    for key in filters:\n",
     "        if df_copy.dtypes[key]=='O': \n",
-    "            if isinstance(filters[key],list): \n",
-    "                df_copy=df_copy.loc[df_copy[key].isin(filters[key])] \n",
-    "            else:\n",
-    "                df_copy=df_copy.loc[df_copy[key]==filters[key]]\n",
+    "            df_copy=df_copy.loc[df_copy[key].isin(filters[key])]\n",
     "        elif df_copy.dtypes[key]=='bool':\n",
     "            df_copy=df_copy.loc[df_copy[key]==filters[key]]\n",
     "        else:\n",
     "            i=0\n",
     "            for sign in extract_numeric_filters(filters,key)[0]:\n",
     "                val=extract_numeric_filters(filters,key)[1][i]\n",
-    "                df=logical_operation(df_copy,key,extract_numeric_filters(filters,key)[0][i],val)\n",
+    "                df_copy=logical_operation(df_copy,key,extract_numeric_filters(filters,key)[0][i],val)\n",
     "                i+=1\n",
     "    return df_copy   "
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 7,
    "id": "096dc508",
    "metadata": {},
    "outputs": [],
@@ -202,30 +167,19 @@
     "# function that filters, groups, and aggregates the data in a copy of the given dataframe\n",
     "    # param df: the dataframe to be filtered\n",
     "    # param filters: a dictionary where the keys are the columns to filter the dataframe by and the values are the filters\n",
-    "    # param col_to_groupby: the column(s) of the dataframe to group by in string or list of strings format\n",
-    "    # param col_to_agg: the column(s) of the dataframe to aggregate in string or list of strings format\n",
-    "    # param agg: the function(s) to aggregate the columns by in string or list of strings format\n",
-    "    # param new_col_names: the new name(s) of the column(s) in list of strings format\n",
+    "        # keys must be of type string and values must be of type list\n",
+    "    # param col_to_groupby: a list of the column(s) of the dataframe to group by\n",
+    "        # column names must be of type string\n",
+    "    # param col_to_agg: a list of the column(s) of the dataframe to aggregate \n",
+    "        # column names must be of type string\n",
+    "    # param agg: a list of the the function(s) to aggregate the columns by \n",
+    "        # functions must be of type string and in a list within the larger list, example: [[\"count\"],[\"max\",\"min\"]]\n",
+    "    # param new_col_names: a list of the new column names \n",
+    "        # new column names must be of type string\n",
     "# raises Exceptions through the function filter_dataframe\n",
     "# returns a filtered, grouped, and aggregated copy of the given dataframe \n",
     "    df_copy=filter_dataframe(df,filters)\n",
-    "    agg_dict,col_names_dict={},{}\n",
-    "    if isinstance(agg,list):\n",
-    "        i=0\n",
-    "        for index in agg:\n",
-    "            print(\"main\",index)\n",
-    "            if not isinstance(index,list):\n",
-    "                agg[i]=[index]\n",
-    "            i+=1\n",
-    "    else:\n",
-    "        agg=[agg]\n",
-    "    if isinstance(col_to_agg,list):\n",
-    "        i=0\n",
-    "        for col in col_to_agg:\n",
-    "            agg_dict[col]=agg[i]\n",
-    "            i+=1\n",
-    "    else:\n",
-    "        agg_dict[col_to_agg]=agg\n",
+    "    agg_dict=dict(zip(col_to_agg,agg))\n",
     "    df_copy=df_copy.groupby(col_to_groupby).agg(agg_dict).reset_index()\n",
     "    df_copy.columns=new_col_names\n",
     "    return df_copy"
@@ -233,8 +187,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
-   "id": "7014a911",
+   "execution_count": 8,
+   "id": "bb7054c1",
    "metadata": {},
    "outputs": [
     {
@@ -301,16 +255,16 @@
        "4      s1mple     22"
       ]
      },
-     "execution_count": 9,
+     "execution_count": 8,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
     "# example: from \"Kills\" dataframe, filter rows where \"AttackerTeam\" is \"Natus Vincere\", groupby \"AttackerName\",\n",
-    "# aggregate \"AttackerName\", use the aggregate function \"count\", change the column names to \"PlayerName\" and \"Kills\" \n",
-    "calculate_statistics(data_df[\"Kills\"],{\"AttackerTeam\":\"Natus Vincere\"},\"AttackerName\",\"AttackerName\",\n",
-    "                     \"count\",[\"PlayerName\",\"Kills\"])"
+    "# aggregate \"AttackerName\", use the aggregate function \"count\", and change the column names to \"PlayerName\" and \"Kills\" \n",
+    "calculate_statistics(data_df[\"Kills\"],{\"AttackerTeam\":[\"Natus Vincere\"]},[\"AttackerName\"],[\"AttackerName\"],\n",
+    "                     [[\"count\"]],[\"PlayerName\",\"Kills\"])"
    ]
   }
  ],
