Added test class for testing statistics functions

--- a/csgo/analytics/Statistics.ipynb
+++ b/csgo/analytics/Statistics.ipynb
@@ -23,26 +23,26 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "00:45:24 [INFO] Go version>=1.14.0\n",
-      "00:45:24 [INFO] Initialized CSGODemoParser with demofile C:\\Users\\aagrawal-22\\CSGO_Demofiles\\gambit-vs-natus-vincere-m1-dust2.dem\n",
-      "00:45:24 [INFO] Setting demo id to GA-NaVi-BLAST2021\n",
-      "00:45:24 [INFO] Setting parse rate to 128\n",
-      "00:45:24 [INFO] Running Golang parser from C:\\Users\\aagrawal-22\\Anaconda3\\lib\\site-packages\\csgo-0.1-py3.8.egg\\csgo\\parser\\\n",
-      "00:45:24 [INFO] Looking for file at C:\\Users\\aagrawal-22\\CSGO_Demofiles\\gambit-vs-natus-vincere-m1-dust2.dem\n",
-      "00:45:56 [INFO] Wrote demo parse output to GA-NaVi-BLAST2021.json\n",
-      "00:45:56 [INFO] Reading in JSON from GA-NaVi-BLAST2021.json\n",
-      "00:45:56 [INFO] JSON data loaded, available in the `json` attribute to parser\n",
-      "00:45:56 [INFO] Successfully parsed JSON output\n",
-      "00:45:56 [INFO] Successfully returned JSON output\n",
-      "00:45:56 [INFO] Parsed rounds to Pandas DataFrame\n",
-      "00:45:56 [INFO] Parsed kills to Pandas DataFrame\n",
-      "00:45:56 [INFO] Parsed damages to Pandas DataFrame\n",
-      "00:45:56 [INFO] Parsed grenades to Pandas DataFrame\n",
-      "00:45:56 [INFO] Parsed flashes to Pandas DataFrame\n",
-      "00:45:56 [INFO] Parsed bomb_events to Pandas DataFrame\n",
-      "00:45:56 [INFO] Parsed frames to Pandas DataFrame\n",
-      "00:45:57 [INFO] Parsed player frames to Pandas DataFrame\n",
-      "00:45:57 [INFO] Returned dataframe output\n"
+      "02:13:43 [INFO] Go version>=1.14.0\n",
+      "02:13:43 [INFO] Initialized CSGODemoParser with demofile C:\\Users\\aagrawal-22\\CSGO_Demofiles\\gambit-vs-natus-vincere-m1-dust2.dem\n",
+      "02:13:43 [INFO] Setting demo id to GA-NaVi-BLAST2021\n",
+      "02:13:43 [INFO] Setting parse rate to 128\n",
+      "02:13:43 [INFO] Running Golang parser from C:\\Users\\aagrawal-22\\Anaconda3\\lib\\site-packages\\csgo-0.1-py3.8.egg\\csgo\\parser\\\n",
+      "02:13:43 [INFO] Looking for file at C:\\Users\\aagrawal-22\\CSGO_Demofiles\\gambit-vs-natus-vincere-m1-dust2.dem\n",
+      "02:14:12 [INFO] Wrote demo parse output to GA-NaVi-BLAST2021.json\n",
+      "02:14:12 [INFO] Reading in JSON from GA-NaVi-BLAST2021.json\n",
+      "02:14:13 [INFO] JSON data loaded, available in the `json` attribute to parser\n",
+      "02:14:13 [INFO] Successfully parsed JSON output\n",
+      "02:14:13 [INFO] Successfully returned JSON output\n",
+      "02:14:13 [INFO] Parsed rounds to Pandas DataFrame\n",
+      "02:14:13 [INFO] Parsed kills to Pandas DataFrame\n",
+      "02:14:13 [INFO] Parsed damages to Pandas DataFrame\n",
+      "02:14:13 [INFO] Parsed grenades to Pandas DataFrame\n",
+      "02:14:13 [INFO] Parsed flashes to Pandas DataFrame\n",
+      "02:14:13 [INFO] Parsed bomb_events to Pandas DataFrame\n",
+      "02:14:13 [INFO] Parsed frames to Pandas DataFrame\n",
+      "02:14:14 [INFO] Parsed player frames to Pandas DataFrame\n",
+      "02:14:14 [INFO] Returned dataframe output\n"
      ]
     }
    ],
@@ -66,6 +66,8 @@
     "# returns a list with all of the logical operators and a list with all of the numerical values found in the key's values\n",
     "    sign_list,val_list=[],[] \n",
     "    for index in filters[key]:\n",
+    "        if not isinstance(index,str):\n",
+    "            raise ValueError(\"Filter(s) for column \"+f'\"{key}\"'+\" must be of type string\")\n",
     "        i,sign=0,\"\"\n",
     "        while i<len(index) and not index[i].isdecimal(): \n",
     "            sign+=index[i] \n",
@@ -98,11 +100,11 @@
     "        if df.dtypes[key]==\"O\":\n",
     "            for index in filters[key]: \n",
     "                if not isinstance(index,str): \n",
-    "                    raise Exception(\"Filter(s) for column \"+f'\"{key}\"'+\" must be of type string\")\n",
+    "                    raise ValueError(\"Filter(s) for column \"+f'\"{key}\"'+\" must be of type string\")\n",
     "        elif df.dtypes[key]==\"bool\":\n",
     "            for index in filters[key]: \n",
     "                if not isinstance(index,bool): \n",
-    "                    raise Exception(\"Filter(s) for column \"+f'\"{key}\"'+\" must be of type boolean\")\n",
+    "                    raise ValueError(\"Filter(s) for column \"+f'\"{key}\"'+\" must be of type boolean\")\n",
     "        else:\n",
     "            extract_numeric_filters(filters,key)  "
    ]
@@ -143,10 +145,8 @@
     "    df_copy=df.copy() \n",
     "    check_filters(df_copy,filters) \n",
     "    for key in filters:\n",
-    "        if df_copy.dtypes[key]=='O': \n",
+    "        if df_copy.dtypes[key]=='O' or df_copy.dtypes[key]=='bool': \n",
     "            df_copy=df_copy.loc[df_copy[key].isin(filters[key])]\n",
-    "        elif df_copy.dtypes[key]=='bool':\n",
-    "            df_copy=df_copy.loc[df_copy[key]==filters[key]]\n",
     "        else:\n",
     "            i=0\n",
     "            for sign in extract_numeric_filters(filters,key)[0]:\n",
